# velocityai

./: PROGRESS.md  README.md  amplify.yml  package-lock.json  package.json  rename-to-velocity.sh  run_velocity_demo.sh  velocity_browser_automation_prompt.sh  vite.config.ts
ai-governance-backend/: ai_governance_api.py  ai_governance_manager.py
architecture/: ERIP_ARCHITECTURE.md
certifications-backend/: api.py  certification_manager.py  requirements.txt
cloud-scanner/: cloud_api.py  cloud_scanner.py  requirements.txt
docs/: ERIP_EURO_POSITIONING_IMPLEMENTATION_ROADMAP.md  PROGRESS.md  PYTHON_IMPLEMENTATION_FEATURES.md  VELOCITY_EURO_POSITIONING_IMPLEMENTATION_ROADMAP.md  enterprise-scalability-validation.md  erip_ai_agents_implementation.md  erip_auth_architecture.md  erip_claude_code_prompt.md  erip_comprehensive_prd.md  erip_data_architecture.md  erip_executive_storytelling_content.md  erip_master_prompt.md  erip_risk_appetite_framework.md  erip_sales_accelerator_enhancement.md  erip_sheets_integration.md  erip_trust_center_implementation.md  erip_user_roles.md  fullstack_trust_platform_implemention_plan.md  gbm_velocity_implementation.md  navigation_system.md  velocity_agent_orchestration_plan.md  velocity_ai_agents_implementation.md  velocity_claude_code_prompt.md  velocity_compliance_expansion.md  velocity_comprehensive_prd.md  velocity_dashboard_enhancement.md  velocity_integration_guide.md  velocity_owasp_security_enhancement.md  velocity_risk_appetite_framework.md  velocity_sales_accelerator_enhancement.md  velocity_service_documentation.md  velocity_sheets_integration.md  velocity_sii.md  velocity_trust_center_implementation.md  workflow-examples.md
erip-platform/: .env.example  .env.production  CIS_CONTROLS_INTEGRATION.md  VELOCITY_USER_FLOW.md  amplify-velocity.yml  amplify.yml  demo-video-script.md  index.html  package-lock.json  package.json  simple_backend.py  start-demo.sh  test_frontend_flow.py  tsconfig.app.json  velocity-seed-pitch.md  velocity_backend.py  vite.config.ts
erip-platform/backend/rust/: Cargo.toml
erip-platform/backend/rust/src/: main.rs
privacy-backend/: privacy_api.py  privacy_manager.py
src/: App.tsx  index.css
velocity-platform/: .env  .env.example  .env.production.example  .env.production.real  .env.production.template  .env.staging  .env.supabase.template  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PROGRESS.md  ENTERPRISE_TEST_RESULTS.md  FEATURES_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  PROGRESS.md  (+24 more)
velocity-platform/backend/python/: demo_main.py  demo_main_old.py  final_integration_test.py  main.py  pyproject.toml  pytest.ini  test_advanced_roles_simple.py  test_api_simple.py  test_data_architecture.py  test_platform.py  test_security_validation.py  test_uv_service.py
velocity-platform/backend/python/advanced_roles/: __init__.py  role_delegation.py  router.py
velocity-platform/backend/python/ai_models/: ab_testing.py  compliance_nlp.py  inference_optimizer.py  model_manager.py  model_server.py
velocity-platform/backend/python/data_architecture/: __init__.py  cloud_connectors.py  router.py  storage.py  streaming.py
velocity-platform/backend/python/deployment/aws/scripts/: deploy.sh
velocity-platform/backend/python/deployment/docker/: Dockerfile  docker-compose.yml
velocity-platform/backend/python/deployment/monitoring/: alerts.yml  prometheus.yml
velocity-platform/backend/python/enhanced_auth/: policies.py  router.py  sso.py
velocity-platform/backend/python/financial_intelligence/: advanced_instruments.py  advanced_schema.sql  erp_integration.py  financial_engine.py  regulatory_capital.py  router.py  timescale_db.py
velocity-platform/backend/python/gbm_risk_engine/: fair_integration.py  gbm_simulator.py  hubbard_estimation.py  portfolio_analytics.py  risk_metrics.py  router.py  stress_testing.py  validation_engine.py
velocity-platform/backend/python/owasp_security/: __init__.py  compliance_framework.py  penetration_testing.py  router.py  security_audit.py  security_middleware.py
velocity-platform/backend/python/sales_accelerator/: crm_integration.py  intelligence_engine.py  mobile_enablement.py  proposal_engine.py
velocity-platform/backend/python/shared/: auth.py  config.py  integration.py  integration_router.py
velocity-platform/backend/python/sheets_integration/: sheets_engine.py  websocket_manager.py
velocity-platform/backend/python/tests/: __init__.py  test_api.py  test_integration.py
velocity-platform/backend/python/user_settings/: settings_api.py
velocity-platform/backend/velocity/: CLOUD_INTEGRATION_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  README.md  SECURITY_ARCHITECTURE.md  agent_communication.py  agent_context.py  agent_executor.py  agent_optimization.py  agent_orchestration.py  alembic.ini  assessment_manager.py  assessment_routes.py  audit_logging.py  audit_routes.py  audit_trail.py  auth.py  auth_routes.py  browser_automation.py  cloud_integration_manager.py  cloud_integrations.py  compliance_questionnaire.py  compliance_report_generator.py  compliance_routes.py  database.py  database_enhanced.py  demo_cloud_integration.py  demo_environment.py  demo_qie_comprehensive.py  docker-compose.yml  document_management.py  document_routes.py  email_routes.py  email_service.py  enhanced_middleware.py  error_handling.py  evidence_routes.py  evidence_workflow.py  framework_manager.py  (+32 more)
velocity-platform/backend/velocity/migrations/: env.py  script.py.mako
velocity-platform/backend/velocity/migrations/versions/: 001_initial_schema.py
velocity-platform/backend/velocity/supabase/.temp/: pooler-url
velocity-platform/backend/velocity/templates/email/: gdpr_transfer_guide.html  gdpr_transfer_guide.txt
velocity-platform/rust/: Cargo.toml
velocity-platform/rust/src/: credentials.rs  evidence.rs  lib.rs  trust_score.rs  vtp.rs
velocity-platform/src/services/cryptoCore/: Cargo.toml  index.ts
velocity-platform/src/services/cryptoCore/src/: blockchain_compliance.rs  ffi.rs  hash_engine.rs  lib.rs  merkle_tree.rs  monte_carlo.rs  signature_verifier.rs  trust_calculator.rs
(+877 files in other folders)
