[package]
name = "velocity-crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Cryptographic libraries
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

# Blockchain and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
base64 = "0.21"

# Random number generation
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Web Assembly support
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Merkle tree implementation
merkle = "1.2"

# IPFS integration
ipfs-api-backend-hyper = { version = "0.6", optional = true }

[dependencies.wasm-bindgen]
version = "0.2"

[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "js-sys", "web-sys"]
ipfs = ["ipfs-api-backend-hyper"]