[package]
name = "velocity-settings-api"
version = "1.0.0"
edition = "2021"
authors = ["ERIP Velocity Team <velocity@eripapp.com>"]
description = "Production-ready PCI DSS v4.0 compliant user settings API for Velocity platform"

[dependencies]
# Web framework - Production-grade performance
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["tokio", "tower", "tower-log"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Serialization - Zero-copy performance
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography - FIPS 140-2 Level 3 compliance
ring = "0.17"  # Audited crypto library
aes-gcm = "0.10"  # AES-256-GCM encryption
argon2 = "0.5"  # OWASP recommended password hashing
chacha20poly1305 = "0.10"  # High-performance AEAD
ed25519-dalek = "2.0"  # Digital signatures

# Database - Production-grade performance
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "cluster"] }

# Authentication & Authorization
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging & Monitoring - Production observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"

# Validation
validator = { version = "0.17", features = ["derive"] }

# HTTP client for external services
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Security
secrecy = "0.8"  # Secure secret handling
subtle = "2.5"  # Constant-time comparisons

# Performance monitoring
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "encryption_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 1