[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "anthropic>=0.60.0",
    "arch>=7.2.0",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.3.1",
    "emcee>=3.1.6",
    "fastapi>=0.116.1",
    "flower>=2.0.1",
    "gunicorn>=23.0.0",
    "langchain>=0.3.27",
    "numpy>=2.3.2",
    "openai>=1.98.0",
    "pandas>=2.3.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pydantic[settings]>=2.11.7",
    "pyportfolioopt>=1.5.6",
    "python-dateutil>=2.9.0.post0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "quantlib>=1.39",
    "redis>=6.2.0",
    "riskfolio-lib>=7.0.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "sentry-sdk[fastapi]>=2.34.1",
    "sqlalchemy[asyncio]>=2.0.42",
    "statsmodels>=0.14.5",
    "structlog>=25.4.0",
    "transformers>=4.54.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]
