[project]
name = "velocity"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosmtplib>=4.0.1",
    "alembic>=1.16.4",
    "azure-mgmt-compute>=35.0.0",
    "bcrypt>=4.3.0",
    "boto3>=1.40.1",
    "fastapi>=0.116.1",
    "google-cloud-compute>=1.33.0",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.7",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.3",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "supabase>=2.17.0",
    "uvicorn>=0.35.0",
]
