[package]
name = "velocity-crypto-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cryptographic libraries
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
ring = "0.17"
ed25519-dalek = "2.1"
x25519-dalek = "2.0"

# Performance and parallelization
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"
num_cpus = "1.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# Random number generation
rand = "0.8"
rand_distr = "0.4"
rand_xoshiro = "0.6"

# FFI for TypeScript/Node.js integration
neon = "0.10"
wasm-bindgen = "0.2"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "crypto_benchmarks"
harness = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1